# guardianlan

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/dashboard/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
apps/dashboard/src/: index.html  styles.css
apps/dashboard/src/app/: app.config.ts  app.css  app.html  app.spec.ts  app.ts  dashboard-api.service.ts  dashboard.tokens.ts  models.ts
collectors/: Cargo.toml  Dockerfile
collectors/common/: Cargo.toml
collectors/common/src/: lib.rs
collectors/discovery-collector/: Cargo.toml
collectors/discovery-collector/src/: lib.rs  main.rs  vendor_oui.rs
collectors/discovery-collector/tests/: publish.rs
collectors/dns-collector/: Cargo.toml
collectors/dns-collector/src/: lib.rs  main.rs
collectors/dns-collector/tests/: publish.rs
collectors/flow-collector/: Cargo.toml
collectors/flow-collector/src/: lib.rs  main.rs
collectors/flow-collector/tests/: publish.rs
deploy/appliance/: .env.gateway.example  .env.host-dev.example
deploy/appliance/nftables/: guardian-lan.nft.template
deploy/appliance/systemd-networkd/: 10-wan.network.template  20-lan.network.template
docs/: api.md  appliance-mode.md  architecture.md  events.md  frontend.md  observer-mode.md  operations.md  plug-and-play-architecture.md  product-brief.md  roadmap.md  security.md
docs/adr/: 0001-rust-for-collectors.md  0002-go-for-control-plane.md  0003-nats-event-bus.md  0004-summary-retention.md  0005-docker-compose-baseline.md  0006-appliance-mode-v2.md
fixtures/discovery/: devices.json
fixtures/dns/: queries.json
fixtures/flows/: events.json
infra/postgres/init/: 001_schema.sql
scripts/appliance/: apply-nftables.sh  apply-sysctl.sh  preflight.sh  render-networkd.sh  render-nftables.sh
scripts/observer/: down.sh  up.sh
services/control-plane/: Dockerfile  go.mod  go.sum
services/control-plane/cmd/api/: main.go
services/control-plane/internal/api/: server.go  server_test.go
(+16 files in other folders)
